--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 
     <!-- All styles in a separate CSS file -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='images/icon-welding-64.png') }}">
 </head>
 <body>
 
